--- a/src/app/components/auth/login/login.component.css
+++ b/src/app/components/auth/login/login.component.css
@@ -6,10 +6,8 @@
     height: 30rem;
     width: 7px;
     border-radius: 10px;
-    /* box-shadow: inset 0 0 2px rgba(66, 66, 66, 0.3); */
-    /* background-color: rgb(252, 155, 98); */
-    /* background-color: rgb(206, 206, 206); */
-    background: linear-gradient(60deg, #fa5151, #4ac6ec);
+    background: linear-gradient(70deg,#937097, #e9b5f0);
+    /* background: linear-gradient(70deg, #ff8282, #7de3ff); */
     margin: 30px;
 }
 
