--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -24,7 +24,7 @@
                 <div class="col-md-11">
                   <div class="form-group">
                     <label class="bmd-label-floating">Password</label>
-                    <input type="text" class="form-control" formControlName="lPassword">
+                    <input type="password" class="form-control" formControlName="lPassword">
                   </div>
                 </div>
               </div>
