--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -155,7 +155,8 @@
       </div>
       <div class="modal-footer" [ngClass]="{'extrashadow':newList.content.length > 5}">
         <button type="button" class="btn btn-round btn-info" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger btn-round" (click)="addList()" data-dismiss="modal" [disabled]="newList.content.length <=0 || newList.title.length <=0">Save</button>
+        <button type="button" class="btn btn-danger btn-round" (click)="addList()" data-dismiss="modal">Save</button>
+        <!-- <button type="button" class="btn btn-danger btn-round" (click)="addList()" data-dismiss="modal" [disabled]="newList.content.length <=0 || newList.title.length <=0">Save</button> -->
       </div>
     </div>
   </div>
