--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -108,7 +108,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-newheader col-md-11">
-        <input class="form-control no-border text-muted" placeholder="Title..." type="text" [(ngModel)]="newList.title"
+        <input class="form-control no-border" placeholder="Title..." type="text" [(ngModel)]="newList.title"
           autofocus>
       </div>
       <div class="modal-body">
