--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,13 +31,13 @@
         </a>
       <!-- </li> -->
       <ul class="navbar-nav d-flex flex-row">
-        <li class="nav-item" *ngIf="curUser==='' || !curUser">
+        <li class="nav-item" *ngIf="!curUser || curUser===''">
           <button class="btn btn-info btn-round btn-sm" href="#" routerLink="/login">
             <strong> Login </strong> <span class="sr-only">(current)</span>
           </button>
         </li>
-        <li class="nav-item" *ngIf="curuser && curUser!==''">
-          <button class="btn btn-info btn-round btn-sm" href="#" routerLink="/login">
+        <li class="nav-item" *ngIf="curUser && curUser!==''">
+          <button class="btn btn-info btn-round btn-sm" href="#" (click)="logout()">
             <strong> Logout </strong> <span class="sr-only">(current)</span>
           </button>
         </li>
