--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,7 +41,7 @@
             <strong> Logout </strong> <span class="sr-only">(current)</span>
           </button>
         </li>
-        <li class="nav-item">
+        <li class="nav-item d-none d-md-block">
           <button class="navbar-toggler btn btn-primary btn-round btn-sm" type="button" data-toggle="collapse"
             data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <strong> About </strong> <span class="sr-only">(current)</span>
