--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -24,7 +24,7 @@
                 <div class="col-md-11">
                   <div class="form-group">
                     <label class="bmd-label-floating">Password</label>
-                    <input type="password" class="form-control" formControlName="lPassword" (onfocus)="loginForm.get('lErrorMsg').value=''">
+                    <input type="password" class="form-control" formControlName="lPassword">
                   </div>
                 </div>
               </div>
@@ -52,8 +52,8 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label class="bmd-label-floating">Fist Name</label>
-                    <input type="text" class="form-control" formControlName="sFirstName">
+                    <label class="bmd-label-floating">Fist Name*</label> <input type="text" class="form-control"
+                        formControlName="sFirstName">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -63,32 +63,33 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-12" *ngIf="sf.sFirstName.errors && submitted">
+              <div class="col-md-12" *ngIf="sf.sFirstName.errors && sf.sFirstName.touched && sf.sFirstName?.value !== ''">
                 <small id="passwordLoginError" class="text-danger">Name Required.</small>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label class="bmd-label-floating">Email address</label>
-                    <input type="email" class="form-control" formControlName="sUsername">
+                    <label class="bmd-label-floating">Email address*</label>
+                    <input type="email" class="form-control" formControlName="sUsername" autocomplete="off">
                   </div>
                 </div>
               </div>
-              <div class="col-md-12" *ngIf="sf.sUsername.errors && submitted">
+              <div class="col-md-12" *ngIf="sf.sUsername.errors && sf.sUsername.touched && sf.sUsername.value?.length > 0">
                 <small id="passwordLoginError" class="text-danger">Invalid Email Address.</small>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label class="bmd-label-floating">Password</label>
+                    <label class="bmd-label-floating">Password*</label>
                     <input type="password" class="form-control" formControlName="sPassword">
                   </div>
                 </div>
               </div>
-              <div class="col-md-12" *ngIf="sf.sPassword.errors && submitted">
-                <small id="passwordLoginError" class="text-danger">Password between 6 to 20 chars.</small>
+              <div class="col-md-12" *ngIf="sf.sPassword.errors && sf.sPassword.touched && sf.sPassword.value?.length > 0">
+                <small id="passwordLoginError" class="text-danger">Password must be between 6 to 20 chars.</small>
               </div>
               <div class="row top-extra-pads">
+                <label class="text-dark align-self-center font-weight-bold font-italic"><small>* = Required</small></label>
                 <button type="submit" class="btn btn-danger ml-auto">Create</button>
                 <div class="clearfix"></div>
               </div>
